@@ -1,4 +1,4 @@
-#Sat Feb 03 11:23:08 EST 2007
+#Mon Feb 05 22:34:50 EST 2007
 major_version=1.6b
-minor_version=34
+minor_version=35
 app_name=eLife
