@@ -1,3 +1,14 @@
+== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b35.zip V1.6bb35]  ==
+
+''' CBUS '''
+
+Fixed issue with incorrect data type when processing MMI messages from a Label device.
+
+
+''' M1 '''
+
+Updates to TALK
+
 == 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b34.zip V1.6bb34]  ==
 
 ''' Scripting '''
